z-index issue solved

--- a/src/stories/PhotoLayout/photoLayout.css
+++ b/src/stories/PhotoLayout/photoLayout.css
@@ -30,10 +30,6 @@
 		/* background-color: red; */
 	}
 }
-.photoLayoutGridContainer > div {
-	/* border: 3px solid red;
-	background-color: aquamarine; */
-}
 
 /*----------------------------------------------------------*/
 /* body {
